# FlightController

./: .gitignore  .gitmodules  README.md  compile_stuff.sh  cp_stuff.sh  cross-compile.txt  main.cpp  meson.build  spiMap.txt
arm/: .ninja_deps  .ninja_log  build.ninja  foo
arm/meson-logs/: meson-log.txt
arm/simulation/: simulation
arm/test/math/types/: test_conversion
arm/test/models/: test_prop_controller_x
controllers/: dynamic_compensation_qc.cpp  dynamic_compensation_qc.h  meson.build  quadcopter_controller.h  quat_control.cpp  quat_control.h
hw/: .mpu9250.cpp.swp  config.json  main.cpp  main2.cpp  main_quat.cpp  meson.build  mpu9250.cpp  mpu9250.h  mpu9250_spi.cpp  pru_comms.cpp  pru_comms.h  receiver.cpp  receiver.h  spiback
hw/pru/: main.c
math/: derivative.h  meson.build
math/matrix/: matrix.cpp  matrix.h  meson.build
math/rotation/: angular_velocity_conversion.cpp  angular_velocity_conversion.h  euler.cpp  euler.h  meson.build  rotation.cpp  rotation.h
math/rotation/private/: meson.build  quaternion.cpp  quaternion.h  rotation_matrix.cpp  rotation_matrix.h
math/types/: conversion.cpp  conversion.h  meson.build  type_conversion.cpp  type_conversion.h
math/types/matrix/: .matrix.h.swp  matrix.cpp  matrix.h  meson.build
math/types/quaternion/: meson.build  quaternion.cpp  quaternion.h
math/types/vector/: meson.build  vector.h  vector3f.cpp  vector3f.h  vector4f.cpp  vector4f.h
math/vector/: vector3f.cpp  vector3f.h
models/: .quadcopter.cpp.swp  meson.build  model.h  prop_controller.cpp  prop_controller.h  prop_controller_x.cpp  prop_controller_x.h  quadcopter.cpp  quadcopter.h
models/sensors/: grad.cpp  grad.h  madgwick_filter.cpp  madgwick_filter.h  madgwick_imu_filter.cpp  madgwick_imu_filter.h  madgwick_marg_filter.cpp  madgwick_marg_filter.h  mahony_complimentary_filter.cpp  mahony_complimentary_filter.h  meson.build
rotation/: euler.cpp  euler.h  meson.build  rotation.cpp  rotation.h
rotation/private/: meson.build  quaternion.cpp  quaternion.h  rotation_matrix.cpp  rotation_matrix.h
rotation/vector/: vector3f.cpp  vector3f.h
simulation/: main.cpp  meson.build
test/: common.h  meson.build  test_util.h
test/controllers/: .test_quat_control.cpp.swp  meson.build  test_dynamic_compensation_qc.cpp  test_quat_control.cpp
test/math/: meson.build  test_derivative.cpp
test/math/matrix/: meson.build  test_matrix.cpp
test/math/rotation/: .test_rotation.cpp.swp  meson.build  test_angular_velocity_conversion.cpp  test_euler.cpp  test_rotation.cpp
test/math/rotation/private/: meson.build  test_quaternion.cpp  test_rotation_matrix.cpp
test/math/types/: meson.build  test_type_conversion.cpp
test/math/types/matrix/: meson.build  test_matrix.cpp
test/math/types/quaternion/: meson.build  test_quaternion.cpp
test/math/types/vector/: meson.build  test_vector.cpp  test_vector3f.cpp  test_vector4f.cpp
test/math/vector/: meson.build  test_vector.cpp
test/models/: meson.build  test_prop_controller.cpp  test_prop_controller_x.cpp  test_quadcopter.cpp
test/models/sensors/: com  meson.build  test_madgwick_filter.cpp  test_mahony_filter.cpp
test/rotation/: meson.build  test_euler.cpp
test/rotation/private/: meson.build  test_quaternion.cpp  test_rotation_matrix.cpp
test/rotation/vector/: meson.build  test_vector.cpp
